Fix project labels overflow for deploy keys page

--- a/app/assets/stylesheets/sections/projects.scss
+++ b/app/assets/stylesheets/sections/projects.scss
@@ -272,3 +272,7 @@ ul.nav.nav-projects-tabs {
     }
   }
 }
+
+.deploy-project-label {
+  margin: 1px;
+}
